--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ main {
     height: calc(100% - 2rem);
     overflow-y: scroll;
     justify-content: flex-start;
-    padding-top: 5rem;
+    padding-top: 1.5rem;
 }
 .note::-webkit-scrollbar {
     display: none;
@@ -113,35 +113,45 @@ button {
 fixed {
     z-index: 100;
 }
-.btn1 {
+
+
+.btn svg {
+    width: 25px;
+    height: auto;
+}
+.btn svg g, .btn svg path {
+    fill: var(--text);
+}
+
+.add-btn {
     position: fixed;
     bottom: 10px;
     right: 10px;
     display: flex;
 }
-.btn1 svg {
-    width: 25px;
-    height: auto;
 
-}.btn1 svg g {
-    fill: var(--text);
-}
-.btn1.hidden {
+.add-btn.hidden {
     display: none;
 }
-.btn2 {
+
+/* .exit-btn {
     position: fixed;
     top: calc(1rem + 10px);
     left: calc(1rem + 10px);
     display: none;
 }
-.btn2.active {
+.exit-btn.active {
     display: flex;
+} */
+
+.save-btn {
+    position: fixed;
+    bottom: calc(1rem + 10px);
+    right: calc(1rem + 10px);
+    display: none;
 }
-.btn2 svg {
-    width: 25px;
-    height: auto;
-    fill: var(--text);
+.save-btn.active {
+    display: flex;
 }
 
 @media screen and (max-width: 500px) {
